--- a/GlobalAnalysisCO2/GlobalAnalysisCO2/packages.config
+++ b/GlobalAnalysisCO2/GlobalAnalysisCO2/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FontAwesome.WPF" version="4.5.0.8" targetFramework="net461" />
   <package id="LiveCharts" version="0.7.6" targetFramework="net461" />
   <package id="LiveCharts.Wpf" version="0.7.6" targetFramework="net461" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net461" />
